--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		</div>
 
 		<span class="s1-txt3 txt-center">
-			@ 2017 Coming Soon Template. Designed by Colorlib
+				Copyright © 2025 Alphex Digital. All Rights Reserved.
 		</span>
 		
 	</div>
@@ -132,8 +132,8 @@
 			// Endtime must be > current time
 			endtimeYear: 0,
 			endtimeMonth: 0,
-			endtimeDate: 35,
-			endtimeHours: 18,
+			endtimeDate: 11,
+			endtimeHours: 09,
 			endtimeMinutes: 0,
 			endtimeSeconds: 0,
 			timeZone: "" 
@@ -152,4 +152,5 @@
 	<script src="js/main.js"></script>
 
 </body>
+
 </html>
