change color Black.html

--- a/index.html
+++ b/index.html
@@ -20,11 +20,16 @@
 	<link rel="stylesheet" type="text/css" href="css/util.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 <!--===============================================================================================-->
+	<style>
+		/* Override background */
+		.custom-bg {
+			background-color: #000000; /* Solid black background */
+		}
+	</style>
 </head>
 <body>
 	
-	
-	<div class="bg-g1 size1 flex-w flex-col-c-sb p-l-15 p-r-15 p-t-55 p-b-35 respon1">
+	<div class="custom-bg size1 flex-w flex-col-c-sb p-l-15 p-r-15 p-t-55 p-b-35 respon1">
 		<span></span>
 		<div class="flex-col-c p-t-50 p-b-50">
 			<h3 class="l1-txt1 txt-center p-b-10">
@@ -152,5 +157,4 @@
 	<script src="js/main.js"></script>
 
 </body>
-
 </html>
