Gradient color Update index.html

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 <!--===============================================================================================-->
 	<style>
-		/* Override background */
+		/* Gradient background: top black, bottom dark red */
 		.custom-bg {
-			background-color: #000000; /* Solid black background */
+			background: linear-gradient(180deg, #000000 60%, #1a0000 100%);
+			min-height: 100vh; /* full screen height */
+			width: 100%;
 		}
 	</style>
 </head>
