--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<span></span>
 		<div class="flex-col-c p-t-50 p-b-50">
 			<h3 class="l1-txt1 txt-center p-b-10">
-				Coming Soon
+				We’ll Be Back Soon
 			</h3>
 
 			<p class="txt-center l1-txt2 p-b-60">
@@ -160,4 +160,5 @@
 
 </body>
 </html>
+
 
